--- a/0907_Lecture15/BoardWeb4.1/.settings/org.eclipse.wst.common.component
+++ b/0907_Lecture15/BoardWeb4.1/.settings/org.eclipse.wst.common.component
@@ -14,12 +14,10 @@
                 		
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-                		
-        
-        <property name="java-output-path" value="target/classes"/>
                         
         
         <property name="context-root" value="biz"/>
+        <property name="java-output-path" value="/0903_BoardWeb4/target/classes"/>
                 	
     
     </wb-module>
